src/tests/snapshots/mu__tests__precedence__mult_first_lhs.snap
---
source: src/tests/precedence.rs
expression: snapshot
---
# Input:
3 * 2 + 1

# Result (success):
7

# Stdout:


